working on a general theory

--- a/writeup/_fragments.tex
+++ b/writeup/_fragments.tex
@@ -3,3 +3,9 @@
 In sum, the spillover effect of FDI depends on a strong domestic sector. Therefore, if a government is truly interested in FDI for its spillover and growth-enhancing effect, the government must be equally interested, if not more, in nurturing the absorptive capacity of domestic firms. Holding constant firm characteristics (size, sector, technological capacity, etc.), if we find that domestic firms receive worse treatment by the government, this can be evidence that the government is not primarily interested in the spillover effect of FDI, but potentially rent seeking.
 
 Anticipating alternative explanations, there are reasons for countries to attract FDI other than growth and corruption, such as jobs, capital, and balance of payments. Fortunately, these alternative explanations can be controlled for. Moreover, these factors may account for the enthusiasm of the government towards FDI, but cannot fully explain the discrimination against domestic firms in favor of FDI. Indeed, many factors that are attractive to foreign firms (e.g. skilled labor force, good infrastructure, good governance) has high fixed cost but low marginal cost, and thus should be easily extended to domestic firms. Therefore, if corruption is not the government wants FDI, the domestic sector would benefit instead of being discriminated against.
+
+\begin{itemize}
+\item The gap can be measured by hard measures of business experience. It is important to choose aspects of the business experience that can be \textit{selectively} targeted by the government, e.g. tax rate, time spent dealing with inspectors, etc. In contrast, other aspects, such as quality of the labor force, days without electricity, etc. are harder to be targeted to a certain type of firms. These aspects can serve as the dependent variables in a placebo test.
+
+It is important to note that this design does not suffer from selection bias. In the large literature using FDI survey data, it is impossible to control for the fact that the foreign firms that show up in the sample are the ones that self-select into investing. However, this is not an issue for our design. Because foreign firms that self-select into investing are more likely to be similar to domestic firms than foreign firms that do not, the \textit{observed} gap in the business experience of foreign and domestic firms in the sample is biased downwards and against our hypothesis.
+\end{itemize}
