--- a/writeup/proposal.tex
+++ b/writeup/proposal.tex
@@ -51,7 +51,7 @@
 \usepackage{natbib}
 \bibpunct{(}{)}{;}{a}{}{,} % no comma between author and year
 
-\title{Prospectus: FDI, corruption, and the effect on private sector development}
+\title{Prospectus: The effect of corruption on FDI technological spillover}
 \author{Anh Le}
 
 
@@ -61,14 +61,17 @@
 \section{Empirical Puzzle}
 \input{empirical_puzzle}
 
-\section{Tentative evidence}
+\section{Tentative Evidence}
 \input{preliminary_evidence}
 
-\section{Theory and Measurement}
+\section{Generalized theory}
+\input{trade_off}
+
+\section{Theory}
 \input{theory}
 
 
-\section{Research design}
+\section{Research Design}
 \input{research_design}
 
 \clearpage
